use fully reactive redis, add fetchbyname